Added $color-info variable

--- a/src/sass/components/_labels.scss
+++ b/src/sass/components/_labels.scss
@@ -1,7 +1,7 @@
 .label {
 	font-size: calc-em(13px);
 	color: $color-white;
-	background-color: $color-primary;
+	background-color: $color-info;
 	font-weight: bold;
 	padding: calc-em(4px) calc-em(8px);
 	border-radius: calc-em(1px);
